app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
  .animation-delay-2000 {
    animation-delay: 2s;
  }
  .animation-delay-4000 {
    animation-delay: 4s;
  }
}

::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #333;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #666;
  border-radius: 10px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #757575;
}

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 20 14.3% 4.1%;
    --card: 0 0% 100%;
    --card-foreground: 20 14.3% 4.1%;
    --popover: 0 0% 100%;
    --popover-foreground: 20 14.3% 4.1%;
    --primary: 24 9.8% 10%;
    --primary-foreground: 60 9.1% 100%;
    --secondary: 60 4.8% 95.9%;
    --secondary-foreground: 24 9.8% 10%;
    --muted: 60 4.8% 100%;
    --muted-foreground: 25 5.3% 100%;
    --accent: 60 4.8% 95.9%;
    --accent-foreground: 24 9.8% 10%;
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 60 9.1% 97.8%;
    --border: 20 5.9% 90%;
    --input: 20 5.9% 90%;
    --ring: 20 14.3% 4.1%;
    --radius: 0.5rem;
    --chart-1: 12 76% 61%;
    --chart-2: 173 58% 39%;
    --chart-3: 197 37% 24%;
    --chart-4: 43 74% 66%;
    --chart-5: 27 87% 67%;
  }

  .dark {
    --background: 20 14.3% 4.1%;
    --foreground: 60 9.1% 100%;
    --card: 20 14.3% 4.1%;
    --card-foreground: 60 9.1% 97.8%;
    --popover: 20 14.3% 4.1%;
    --popover-foreground: 60 9.1% 100%;
    --primary: 60 9.1% 97.8%;
    --primary-foreground: 24 9.8% 10%;
    --secondary: 12 6.5% 15.1%;
    --secondary-foreground: 60 9.1% 97.8%;
    --muted: 12 6.5% 15.1%;
    --muted-foreground: 24 5.4% 63.9%;
    --accent: 12 6.5% 15.1%;
    --accent-foreground: 60 9.1% 97.8%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 60 9.1% 97.8%;
    --border: 12 6.5% 15.1%;
    --input: 12 6.5% 15.1%;
    --ring: 24 5.7% 82.9%;
    --chart-1: 220 70% 50%;
    --chart-2: 160 60% 45%;
    --chart-3: 30 80% 55%;
    --chart-4: 280 65% 60%;
    --chart-5: 340 75% 55%;
  }
}

@layer base {
  * {
    @apply border-border;
  }
}

@layer utilities {
  /* Hide scrollbar for Chrome, Safari and Opera */
  .no-scrollbar::-webkit-scrollbar {
    display: none;
  }
  /* Hide scrollbar for IE, Edge and Firefox */
  .no-scrollbar {
    -ms-overflow-style: none; /* IE and Edge */
    scrollbar-width: none; /* Firefox */
  }
}

body {
  background-color: #1a1d1c;
  /* background-image: radial-gradient(at 23% 83%, #1a1d1c 0px, transparent 50%),
    radial-gradient(at 35% -80%, #fc3789 0px, transparent 40%),
    radial-gradient(at 89% 95%, #1a1d1c 0px, transparent 50%),
    radial-gradient(at 75% -80%, #ff9b06 0px, transparent 40%); */
}

h1 {
  @apply text-2xl text-white md:text-3xl lg:text-5xl font-semibold;
}
h2 {
  @apply text-xl text-white md:text-2xl lg:text-3xl font-medium;
}
h3 {
  @apply text-base text-white md:text-lg lg:text-lg font-medium;
}

hr {
  @apply border-stone-700 my-4;
}

p {
  @apply text-gray-400 text-base font-light;
}

.button {
  @apply text-white justify-center text-center w-max h-max mx-auto bg-[#7798bd2a] py-2 px-6 rounded-full border-t border-[#616a9136] cursor-pointer transition duration-200;
  @apply hover:bg-primary_dark hover:-translate-y-0.5;
}

.tag {
  @apply bg-[#2d2d2d] rounded-full text-center text-xs px-3 py-1 text-[#a3a3a3];
}

.project-link {
  @apply text-primary font-semibold;
  @apply hover:underline hover:underline-offset-8;
}

.skill-box {
  @apply bg-box text-zinc-400 hover:text-zinc-200 transition duration-200 rounded-xl p-4 flex items-center gap-4 select-none;
}

.contact-title {
  @apply text-zinc-500 text-base font-light;
}

.contact-link {
  @apply hover:text-primary transition duration-200 cursor-pointer text-white text-2xl;
}

.nav-link {
  @apply text-zinc-400 cursor-pointer py-3 px-6 rounded-lg;
  @apply hover:text-zinc-100 hover:bg-box;
}

.nav-dropdown {
  @apply bg-[#0f1828]  text-white px-2 gap-8 w-max absolute left-0 top-0 py-2 rounded-xl;
}

.nav-dropdown-link {
  @apply font-medium cursor-pointer hover:bg-[#142035] rounded-md  transition duration-200;
}

